--- a/DistributedClimbers-Client/.project
+++ b/DistributedClimbers-Client/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>DistributedClimbers</name>
+	<name>DistributedClimbers-Client</name>
 	<comment></comment>
 	<projects>
 	</projects>
